// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostHeaderUserInfo - Snapshots > matches snapshot for current user (no Follow button) 1`] = `
<div
  data-hover="true"
  data-testid="popover"
>
  <div
    data-as-child="true"
    data-testid="popover-trigger"
  >
    <div
      class="flex min-w-0 gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <div
        data-testid="post-header-user-info-content"
      >
        <div
          data-testid="avatar"
        />
        <div>
          Snapshot User
        </div>
        <div>
          @
          snapshot
        </div>
      </div>
    </div>
  </div>
  <div
    data-side="top"
    data-side-offset="8"
    data-testid="popover-content"
  >
    <div
      data-testid="popover-inner-content"
    >
      <div
        data-testid="avatar"
      />
      <div>
        Snapshot User
      </div>
      <div>
        @
        snapshot
      </div>
    </div>
  </div>
</div>
`;

exports[`PostHeaderUserInfo - Snapshots > matches snapshot when following 1`] = `
<div
  data-hover="true"
  data-testid="popover"
>
  <div
    data-as-child="true"
    data-testid="popover-trigger"
  >
    <div
      class="flex min-w-0 gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <div
        data-testid="post-header-user-info-content"
      >
        <div
          data-testid="avatar"
        />
        <div>
          Other User
        </div>
        <div>
          @
          otherUse
        </div>
      </div>
    </div>
  </div>
  <div
    data-side="top"
    data-side-offset="8"
    data-testid="popover-content"
  >
    <div
      data-testid="popover-inner-content"
    >
      <div
        data-testid="avatar"
      />
      <div>
        Other User
      </div>
      <div>
        @
        otherUse
      </div>
    </div>
  </div>
</div>
`;

exports[`PostHeaderUserInfo - Snapshots > matches snapshot with all props 1`] = `
<div
  data-hover="true"
  data-testid="popover"
>
  <div
    data-as-child="true"
    data-testid="popover-trigger"
  >
    <div
      class="flex min-w-0 gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <div
        data-testid="post-header-user-info-content"
      >
        <div
          data-testid="avatar"
        />
        <div>
          Snapshot User
        </div>
        <div>
          @
          snapshot
        </div>
        <div>
          150
          /
          280
        </div>
      </div>
    </div>
  </div>
  <div
    data-side="top"
    data-side-offset="8"
    data-testid="popover-content"
  >
    <div
      data-testid="popover-inner-content"
    >
      <div
        data-testid="avatar"
      />
      <div>
        Snapshot User
      </div>
      <div>
        @
        snapshot
      </div>
    </div>
  </div>
</div>
`;

exports[`PostHeaderUserInfo - Snapshots > matches snapshot with bio 1`] = `
<div
  data-hover="true"
  data-testid="popover"
>
  <div
    data-as-child="true"
    data-testid="popover-trigger"
  >
    <div
      class="flex min-w-0 gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <div
        data-testid="post-header-user-info-content"
      >
        <div
          data-testid="avatar"
        />
        <div>
          Snapshot User
        </div>
        <div>
          @
          snapshot
        </div>
      </div>
    </div>
  </div>
  <div
    data-side="top"
    data-side-offset="8"
    data-testid="popover-content"
  >
    <div
      data-testid="popover-inner-content"
    >
      <div
        data-testid="avatar"
      />
      <div>
        Snapshot User
      </div>
      <div>
        @
        snapshot
      </div>
    </div>
  </div>
</div>
`;

exports[`PostHeaderUserInfo - Snapshots > matches snapshot with minimal props 1`] = `
<div
  data-hover="true"
  data-testid="popover"
>
  <div
    data-as-child="true"
    data-testid="popover-trigger"
  >
    <div
      class="flex min-w-0 gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <div
        data-testid="post-header-user-info-content"
      >
        <div
          data-testid="avatar"
        />
        <div>
          Test User
        </div>
        <div>
          @
          user123
        </div>
      </div>
    </div>
  </div>
  <div
    data-side="top"
    data-side-offset="8"
    data-testid="popover-content"
  >
    <div
      data-testid="popover-inner-content"
    >
      <div
        data-testid="avatar"
      />
      <div>
        Test User
      </div>
      <div>
        @
        user123
      </div>
    </div>
  </div>
</div>
`;

exports[`PostHeaderUserInfo - Snapshots > matches snapshot without avatarUrl 1`] = `
<div
  data-hover="true"
  data-testid="popover"
>
  <div
    data-as-child="true"
    data-testid="popover-trigger"
  >
    <div
      class="flex min-w-0 gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <div
        data-testid="post-header-user-info-content"
      >
        <div
          data-testid="avatar"
        />
        <div>
          Snapshot User
        </div>
        <div>
          @
          snapshot
        </div>
        <div>
          50
          /
          280
        </div>
      </div>
    </div>
  </div>
  <div
    data-side="top"
    data-side-offset="8"
    data-testid="popover-content"
  >
    <div
      data-testid="popover-inner-content"
    >
      <div
        data-testid="avatar"
      />
      <div>
        Snapshot User
      </div>
      <div>
        @
        snapshot
      </div>
    </div>
  </div>
</div>
`;

exports[`PostHeaderUserInfo - Snapshots > matches snapshot without character count 1`] = `
<div
  data-hover="true"
  data-testid="popover"
>
  <div
    data-as-child="true"
    data-testid="popover-trigger"
  >
    <div
      class="flex min-w-0 gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <div
        data-testid="post-header-user-info-content"
      >
        <div
          data-testid="avatar"
        />
        <div>
          Snapshot User
        </div>
        <div>
          @
          snapshot
        </div>
      </div>
    </div>
  </div>
  <div
    data-side="top"
    data-side-offset="8"
    data-testid="popover-content"
  >
    <div
      data-testid="popover-inner-content"
    >
      <div
        data-testid="avatar"
      />
      <div>
        Snapshot User
      </div>
      <div>
        @
        snapshot
      </div>
    </div>
  </div>
</div>
`;
